--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "compression-webpack-plugin": "^10.0.0",
     "css-loader": "^6.7.3",
     "css-minimizer-webpack-plugin": "^4.2.2",
+    "dotenv-webpack": "^8.0.1",
     "mini-css-extract-plugin": "^2.7.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-dotenv": "^0.1.3",
     "shakapacker": "6.6.0",
     "style-loader": "^3.3.2",
     "terser-webpack-plugin": "^5.3.7",
@@ -34,5 +36,8 @@
   "devDependencies": {
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.10",
     "react-refresh": "^0.14.0"
+  },
+  "scripts": {
+    "start": "react-dotenv && ./bin/webpacker-dev-server"
   }
 }
