--- a/config/database.yml
+++ b/config/database.yml
@@ -8,7 +8,7 @@ default: &default
   adapter: postgresql
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   timeout: 5000
-  database: ENV['DB_NAME'] || pundoras-box
+  database: <%= ENV['DB_NAME'] || 'pundoras-box' %>
 
 development:
   <<: *default
