--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "react": "^18",
     "react-dom": "^18",
     "react-dotenv": "^0.1.3",
+    "react-router": "^6.9.0",
+    "react-router-dom": "^6.9.0",
     "shakapacker": "6.6.0",
     "style-loader": "^3.3.2",
     "terser-webpack-plugin": "^5.3.7",
