--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-dotenv": "^0.1.3",
+    "react-icons": "^4.8.0",
     "react-router": "^6.9.0",
     "react-router-dom": "^6.9.0",
     "shakapacker": "6.6.0",
